v0.9.3
----------------------------------------------------------------------------------------------------
 * Some sanity checks for MDHttpProxy parameter.
 * Rewrote logic to re-schedule MD jobs and announce renewal completion and server restarts. Related
   to issue #42
 * Additional tweaks for libressl support, thanks to @Sp1l 
 * Implemented alternative for OpenSSL ASN1_TIME_diff() helper which is not available in
   libressl. 

v0.9.2
----------------------------------------------------------------------------------------------------
 * Fixes for conversions in gcc, fixed duration parsing when apr_strtoi64() defaults to 0 on
   not seeing any digit.
 * New config directive 'MDHttpProxy <url>' to specify a HTTP(S) proxy for outgoing connections.
   Supported in a2md with the '--proxy <url>' command line option.
 * Synched mod_ssl patch with Apache subversion again and made v4 of the patch. Only changes
   were in log messages, so no need to repatch existing installations.

v0.9.1
----------------------------------------------------------------------------------------------------
 * various fixes in MDRenewWindow handling when specifying percent. Serialization changed. If 
   someone already used percent configurations, it is advised to change these to a new value,
   reload and change back to the wanted ones.
 * various fixes in handling of MDPrivateKeys when specifying 2048 bits (the default) explicitly.
 * mod_md version removed from top level md_store.json file. The store has its own format version
   to facilitate upgrades.

v0.9.0
----------------------------------------------------------------------------------------------------
 * Improved interface to mod_ssl for fallback handling. Backward compatible to previous mod_ssl
   patch, but fallbacks will not work.
 * Provide a temporary, self-signed certificate with a speaking command and domain name if we
   have no other cert for a Managed Domain, yet. Refs github issue #32